--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>robot_launch_files</name>
   <version>0.0.0</version>
   <description>The robot_launch_files package</description>
