--- a/package.xml
+++ b/package.xml
@@ -10,6 +10,6 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <run_depend>vizbox</run_depend>
+  <exec_depend>vizbox</exec_depend>
 
 </package>
